--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Hoseung Jang",
   "license": "MIT",
   "dependencies": {
+    "@emotion/css": "^11.11.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
