--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "jsx": "react-jsx",
     "paths": {
       "components/*": ["./src/components/*"],
+      "hooks/*": ["./src/hooks/*"],
       "pages/*": ["./src/pages/*"],
       "utils/*": ["./src/utils/*"]
     }
