--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "babel-loader": "^9.1.3",
+    "copy-webpack-plugin": "^11.0.0",
     "html-webpack-plugin": "^5.5.3",
     "typescript": "^5.1.6",
     "webpack": "^5.88.2",
