--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@emotion/css": "^11.11.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "scratchable": "^0.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.22.10",
